--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-05/ts01-05.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-05/ts01-05.component.html
@@ -15,10 +15,10 @@
             </div>
             <div class="eight wide field">
               <label class="custom-label-w-18" style="width: 20% !important;">วันที่</label>
-              <div class="ui calendar" style="width:100%" id="begin_date">
+              <div class="ui calendar" style="width:100%" id="date">
                 <div class="ui input left icon">
                   <i class="calendar icon"></i>
-                  <input type="text" style="width:100%" name="date" [(ngModel)]="obj.date" placeholder="วัน/เดือน/ปี" required>
+                  <input type="text" style="width:100%" name="date" autocomplete="off" [(ngModel)]="obj.date" placeholder="วัน/เดือน/ปี" required>
                 </div>
               </div>
             </div>
@@ -31,30 +31,30 @@
                   <label class="custom-label-w-18" style="width: 20% !important;">ที่</label>
                 </div>
                 <div class="five wide field">
-                  <input type="text" name="at1" (keyup)="onKeyUp($event, 'at1')" [(ngModel)]="obj.at1">
+                  <input type="text" name="at1" autocomplete="off" [(ngModel)]="obj.at1">
                 </div>
                 <div class="two wide field">
                   <p style="text-align: center; width: 100%"> / </p>
                 </div>
                 <div class="five wide field">
-                  <input type="text" name="at2" (keyup)="onKeyUp($event, 'at2')" [(ngModel)]="obj.at2">
+                  <input type="text" name="at2" autocomplete="off" [(ngModel)]="obj.at2">
                 </div>
               </div>
             </div>
             <div class="eight wide field">
               <label class="custom-label-w-18" style="width: 20% !important;">สำนัก</label>
-              <input type="text" name="office" [(ngModel)]="obj.office" (keyup)="onKeyUp($event, 'office')" style="width: 100%">
+              <input type="text" name="office" autocomplete="off" [(ngModel)]="obj.office" style="width: 100%">
             </div>
           </div>
 
           <div class="inline fields">
             <div class="eight wide field">
               <label class="custom-label-w-18" style="width: 20% !important;">เรื่อง</label>
-              <input type="text" name="topic" [(ngModel)]="obj.topic" (keyup)="onKeyUp($event, 'topic')" style="width: 100%">
+              <input type="text" name="topic" autocomplete="off" [(ngModel)]="obj.topic" style="width: 100%">
             </div>
             <div class="eight wide field">
               <label class="custom-label-w-18" style="width: 20% !important;">เรียน</label>
-              <input type="text" name="sendTo" [(ngModel)]="obj.sendTo" (keyup)="onKeyUp($event, 'sendTo')" style="width: 100%">
+              <input type="text" name="sendTo" autocomplete="off" [(ngModel)]="obj.sendTo" style="width: 100%">
             </div>
           </div>
 
@@ -71,10 +71,10 @@
             </div>
             <div class="eight wide field">
               <label class="custom-label-w-18" style="width: 20% !important;">ลงวันที่</label>
-              <div class="ui calendar" style="width:100%" id="end_date">
+              <div class="ui calendar" style="width:100%" id="date1">
                 <div class="ui input left icon">
                   <i class="calendar icon"></i>
-                  <input type="text" name="date1" [(ngModel)]="obj.date1" style="width:100%" placeholder="วัน/เดือน/ปี">
+                  <input type="text" name="date1" autocomplete="off" [(ngModel)]="obj.date1" style="width:100%" placeholder="วัน/เดือน/ปี">
                 </div>
               </div>
             </div>
@@ -91,17 +91,17 @@
               <label class="custom-label-w-18">
                 &nbsp;&nbsp;&nbsp;{{i+1}}.
               </label>
-              <input type="text" name="item{{i+1}}" [(ngModel)]="obj['item' + (i+1)]" (keyup)="onKeyUp($event, 'item' + (i+1))">
+              <input type="text" name="item{{i+1}}" autocomplete="off" [(ngModel)]="obj['item' + (i+1)]">
             </div>
           </div>
 
           <div class="inline fields">
             <div class="ten wide field">
               <label class="custom-label-w-20" style="width: 110% !important;">มิได้มาพบตามนัดหมาย ในวันที่</label>
-              <div class="ui calendar" style="width:100%" id="nut_date">
+              <div class="ui calendar" style="width:100%" id="date2">
                 <div class="ui input left icon">
                   <i class="calendar icon"></i>
-                  <input type="text" name="date2" [(ngModel)]="obj.date2" (keyup)="onKeyUp($event, 'date2')" style="width:100%" placeholder="วัน/เดือน/ปี">
+                  <input type="text" name="date2" autocomplete="off" [(ngModel)]="obj.date2" style="width:100%" placeholder="วัน/เดือน/ปี">
                 </div>
               </div>
             </div>
@@ -110,7 +110,7 @@
               <div class="ui calendar" style="width:100%" id="time1">
                 <div class="ui input left icon">
                   <i class="calendar icon"></i>
-                  <input type="text" name="time1" [(ngModel)]="obj.time1" style="width:100%" placeholder="เวลา">
+                  <input type="text" name="time1" autocomplete="off" [(ngModel)]="obj.time1" style="width:100%" placeholder="เวลา">
                 </div>
               </div>
               <label class="custom-label-w-18">&nbsp;&nbsp;น.</label>
@@ -120,10 +120,10 @@
           <div class="inline fields">
             <div class="ten wide field">
               <label class="custom-label-w-20" style="width: 110% !important;">นัดหมายใหม่อีกครั้งวันที่</label>
-              <div class="ui calendar" style="width:100%" id="nut1_date">
+              <div class="ui calendar" style="width:100%" id="date3">
                 <div class="ui input left icon">
                   <i class="calendar icon"></i>
-                  <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
+                  <input type="text" style="width:100%" name="date3" [(ngModel)]="obj.date3"  autocomplete="off" placeholder="วัน/เดือน/ปี">
                 </div>
               </div>
             </div>
@@ -132,7 +132,7 @@
               <div class="ui calendar" style="width:100%" id="time2">
                 <div class="ui input left icon">
                   <i class="calendar icon"></i>
-                  <input type="text" name="time2" [(ngModel)]="obj.time2" style="width:100%" placeholder="เวลา">
+                  <input type="text" name="time2" autocomplete="off" [(ngModel)]="obj.time2" style="width:100%" placeholder="เวลา">
                 </div>
               </div>
               <label class="custom-label-w-18">&nbsp;&nbsp;น.</label>
@@ -142,11 +142,11 @@
           <div class="inline fields">
             <div class="eight wide field">
               <label class="custom-label-w-18">ผู้ตรวจสอบ</label>
-              <input type="text" style="width: 100%">
+              <input type="text" name="checker" [(ngModel)]="obj.checker" style="width: 100%">
             </div>
             <div class="eight wide field">
               <label class="custom-label-w-18">ตำแหน่ง</label>
-              <input type="text" style="width: 100%">
+              <input type="text" name="position" [(ngModel)]="obj.position" style="width: 100%">
             </div>
           </div>
 
