--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/mis_t_s_01_07.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/mis_t_s_01_07.jrxml
@@ -55,7 +55,7 @@
 		<![CDATA[]]>
 	</queryString>
 	<pageHeader>
-		<band height="620" splitType="Stretch">
+		<band height="612" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="6" y="89" width="41" height="18" uuid="8369360c-e067-4c98-988d-f9122c31a47b"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
@@ -96,7 +96,7 @@
 				</textElement>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="274" y="516" width="117" height="18" uuid="670e0dd6-c1dc-4bb8-8b46-0054525c519b"/>
+				<reportElement style="data" x="274" y="517" width="117" height="18" uuid="670e0dd6-c1dc-4bb8-8b46-0054525c519b"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -148,7 +148,7 @@
 				</textElement>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="283" y="536" width="111" height="18" uuid="a9d45484-ed03-46c6-9fcc-aff2b8b02527"/>
+				<reportElement style="data" x="283" y="537" width="111" height="18" uuid="a9d45484-ed03-46c6-9fcc-aff2b8b02527"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -460,7 +460,7 @@
 				</textElement>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="346" y="355" width="96" height="18" uuid="4c0107ca-58f2-4853-b869-01a178143ea1"/>
+				<reportElement style="data" x="346" y="355" width="95" height="18" uuid="4c0107ca-58f2-4853-b869-01a178143ea1"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -473,7 +473,7 @@
 				</textElement>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="274" y="520" width="117" height="18" uuid="bf929703-b1f4-4a04-bde9-7bef49f7c68d"/>
+				<reportElement style="data" x="274" y="521" width="117" height="18" uuid="bf929703-b1f4-4a04-bde9-7bef49f7c68d"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -487,7 +487,7 @@
 				<textFieldExpression><![CDATA[$P{cName}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="283" y="540" width="111" height="18" uuid="c78136be-8895-4a6e-b4b0-fe814d166fa6"/>
+				<reportElement style="data" x="283" y="541" width="111" height="18" uuid="c78136be-8895-4a6e-b4b0-fe814d166fa6"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -557,7 +557,7 @@
 				<textFieldExpression><![CDATA[$P{street}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="346" y="359" width="96" height="18" uuid="fe69c8a8-4ae9-4028-988b-87a43eac4349"/>
+				<reportElement style="data" x="346" y="359" width="95" height="18" uuid="fe69c8a8-4ae9-4028-988b-87a43eac4349"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -955,12 +955,12 @@
 				<textFieldExpression><![CDATA["โดยหนังสือนี้แสดงให้ทราบว่า สำนัก"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="248" y="538" width="51" height="22" uuid="d190f454-6830-4fdb-bc4f-469b95f9a0ad"/>
+				<reportElement style="TextDetail" x="248" y="539" width="51" height="22" uuid="d190f454-6830-4fdb-bc4f-469b95f9a0ad"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["ตำแหน่ง"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="0" y="575" width="158" height="18" uuid="fbccda1a-a926-49af-9ee2-cadac1bb9556"/>
+				<reportElement style="data" x="0" y="567" width="158" height="18" uuid="fbccda1a-a926-49af-9ee2-cadac1bb9556"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -971,12 +971,12 @@
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="0" y="598" width="31" height="22" uuid="ebed1d8f-97d6-4d10-8e00-0c607b5e3dab"/>
+				<reportElement style="TextDetail" x="0" y="590" width="31" height="22" uuid="ebed1d8f-97d6-4d10-8e00-0c607b5e3dab"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["โทร"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="17" y="595" width="138" height="18" uuid="7f8b0298-4caf-4adb-b191-6fe8ec58f38c"/>
+				<reportElement style="data" x="17" y="587" width="138" height="18" uuid="7f8b0298-4caf-4adb-b191-6fe8ec58f38c"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -987,12 +987,12 @@
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="270" y="519" width="12" height="22" uuid="cf307fb6-cb6a-4084-b7c2-cf9bc9f5401c"/>
+				<reportElement style="TextDetail" x="270" y="520" width="12" height="22" uuid="cf307fb6-cb6a-4084-b7c2-cf9bc9f5401c"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["("]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="393" y="519" width="11" height="22" uuid="035e523e-1633-4a6d-aa19-9196889e519e"/>
+				<reportElement style="TextDetail" x="393" y="520" width="11" height="22" uuid="035e523e-1633-4a6d-aa19-9196889e519e"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[")"]]></textFieldExpression>
 			</textField>
@@ -1017,7 +1017,7 @@
 				<textFieldExpression><![CDATA["สำนัก"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="0" y="376" width="441" height="22" uuid="388e6504-9780-4310-a104-bef81a44a738"/>
+				<reportElement style="TextDetail" x="0" y="392" width="441" height="22" uuid="388e6504-9780-4310-a104-bef81a44a738"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["แห่งพระราชบัญญัติภาษีสรรพสามิต พ.ศ. ๒๔๖๐"]]></textFieldExpression>
 			</textField>
@@ -1159,22 +1159,22 @@
 				<textFieldExpression><![CDATA["รหัสไปรษณีย์"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="58" y="394" width="383" height="22" uuid="1867139a-1609-40be-a0ee-2049ea247e57"/>
+				<reportElement style="TextDetail" x="58" y="410" width="383" height="22" uuid="1867139a-1609-40be-a0ee-2049ea247e57"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["อนึ่ง เพื่อป้องกันมิให้บุคคลภายนอกแอบอ้างเป็นพนักงานเจ้าหน้าที่กรมสรรพสามิต"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="0" y="416" width="441" height="22" uuid="06900d39-5e1d-4af0-bdd0-cca7f80883fd"/>
+				<reportElement style="TextDetail" x="0" y="432" width="441" height="22" uuid="06900d39-5e1d-4af0-bdd0-cca7f80883fd"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["เข้าทำการตรวจภาษี จึงขอให้ท่านขอดูบัตรประจำตัวพนักงานเจ้าหน้าที่ผู้ทำการตรวจสอบด้วย และถ้ามีเหตุ"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="0" y="438" width="255" height="22" uuid="487d3151-6169-43d0-9adf-c903c84a8f66"/>
+				<reportElement style="TextDetail" x="0" y="454" width="255" height="22" uuid="487d3151-6169-43d0-9adf-c903c84a8f66"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["สงสัยก็ให้สอบถามไปยังผู้บังคับบัญชาตามหมายเลขโทรศัพท์"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="251" y="435" width="190" height="18" uuid="3314828c-e4a0-4730-bb36-994aa2414c3e"/>
+				<reportElement style="data" x="251" y="451" width="190" height="18" uuid="3314828c-e4a0-4730-bb36-994aa2414c3e"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1187,12 +1187,12 @@
 				</textElement>
 			</textField>
 			<textField>
-				<reportElement style="TextDetail" x="0" y="456" width="268" height="22" uuid="6c69a433-8528-4a86-8fa3-8773c151f9c8"/>
+				<reportElement style="TextDetail" x="0" y="472" width="268" height="22" uuid="6c69a433-8528-4a86-8fa3-8773c151f9c8"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["และขอให้ท่านอำนวยความสะดวกแก่พนักงานเจ้าหน้าที่ด้วย"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="data" x="270" y="497" width="128" height="18" uuid="50b807bb-fe07-4247-8cb7-b253cc42dc60"/>
+				<reportElement style="data" x="270" y="498" width="128" height="18" uuid="50b807bb-fe07-4247-8cb7-b253cc42dc60"/>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1215,6 +1215,70 @@
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{chk3} ? "\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="0" y="376" width="37" height="22" uuid="85090d88-92ae-4c3b-ae03-f8aede1bcc4d"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA["ในวันที่"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="TextDetail" x="181" y="376" width="104" height="22" uuid="1e09ea9e-0729-4a0f-a799-223701d72fdb"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA["ตามบัญญัติไว้ในมาตรา"]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement style="data" x="30" y="373" width="149" height="18" uuid="2e661aa0-8f1e-4b44-8033-abb23c7256c3"/>
+				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
+					<pen lineWidth="1.5" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Dotted" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font size="13"/>
+				</textElement>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement style="data" x="277" y="377" width="164" height="18" uuid="b6601e0f-9566-4fca-a769-a8b37d80ff27"/>
+				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
+					<pen lineWidth="1.5" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font size="13"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{section}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement style="data" x="30" y="377" width="149" height="18" uuid="d9224e59-e17b-4043-be7b-5a19512df849"/>
+				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
+					<pen lineWidth="1.5" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font size="13"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{outDate}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement style="data" x="277" y="373" width="164" height="18" uuid="3c44037f-4134-484c-b135-7ad7a9a326d1"/>
+				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="5">
+					<pen lineWidth="1.5" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Dotted" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font size="13"/>
+				</textElement>
 			</textField>
 		</band>
 	</pageHeader>
