--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -108,7 +108,7 @@
                         </tr>
                     </thead>
                     <tbody style="text-align: center;">
-                        <tr *ngIf="MonthDataList != ''">
+                        <tr *ngIf="MonthDataList != null">
                             <td>1</td>
                             <td>{{MonthDataList.product1}}</td>
                             <td>{{row[1].column3}}</td>
@@ -116,14 +116,14 @@
                             <td>{{MonthDataList.monthRecieve1}}</td>
                             <td>{{row[1].column6}}</td>
                             <td>{{max[1]}}</td>
-                            <td *ngIf="diff[1] < '0'" style=" background-color: red">
+                            <td *ngIf="diff[1] != '0'" style=" background-color: red">
                                 <span style="float: right; color: white"><b>{{diff[1]}}</b></span>
                             </td>
-                            <td *ngIf="diff[1] >= '0'" style="background-color: #00da00">
+                            <td *ngIf="diff[1] == '0'" style="background-color: #00da00">
                                 <span style="float: right; color: white"><b>{{diff[1]}}</b></span>
                             </td>
                         </tr>
-                        <tr *ngIf="MonthDataList != ''">
+                        <tr *ngIf="MonthDataList != null">
                             <td>2</td>
                             <td>{{MonthDataList.product2}}</td>
                             <td>{{row[2].column3}}</td>
@@ -131,14 +131,14 @@
                             <td>{{MonthDataList.monthRecieve2}}</td>
                             <td>{{row[2].column6}}</td>
                             <td>{{max[2]}}</td>
-                            <td *ngIf="diff[2] < '0'" style=" background-color: red">
+                            <td *ngIf="diff[2] != '0'" style=" background-color: red">
                                 <span style="float: right; color: white"><b>{{diff[2]}}</b></span>
                             </td>
-                            <td *ngIf="diff[2] >= '0'" style="background-color: #00da00">
+                            <td *ngIf="diff[2] == '0'" style="background-color: #00da00">
                                 <span style="float: right; color: white"><b>{{diff[2]}}</b></span>
                             </td>
                         </tr>
-                        <tr *ngIf="MonthDataList != ''">
+                        <tr *ngIf="MonthDataList != null">
                             <td>3</td>
                             <td>{{MonthDataList.product3}}</td>
                             <td>{{row[3].column3}}</td>
@@ -146,14 +146,14 @@
                             <td>{{MonthDataList.monthRecieve3}}</td>
                             <td>{{row[3].column6}}</td>
                             <td>{{max[3]}}</td>
-                            <td *ngIf="diff[3] < '0'" style=" background-color: red">
+                            <td *ngIf="diff[3] != '0'" style=" background-color: red">
                                 <span style="float: right; color: white"><b>{{diff[3]}}</b></span>
                             </td>
-                            <td *ngIf="diff[3] >= '0'" style="background-color: #00da00">
+                            <td *ngIf="diff[3] == '0'" style="background-color: #00da00">
                                 <span style="float: right; color: white"><b>{{diff[3]}}</b></span>
                             </td>
                         </tr>
-                        <tr *ngIf="MonthDataList != ''">
+                        <tr *ngIf="MonthDataList != null">
                             <td>4</td>
                             <td>{{MonthDataList.product4}}</td>
                             <td>{{row[4].column3}}</td>
@@ -161,14 +161,14 @@
                             <td>{{MonthDataList.monthRecieve4}}</td>
                             <td>{{row[4].column6}}</td>
                             <td>{{max[4]}}</td>
-                            <td *ngIf="diff[4] < '0'" style=" background-color: red">
+                            <td *ngIf="diff[4] != '0'" style=" background-color: red">
                                 <span style="float: right; color: white"><b>{{diff[4]}}</b></span>
                             </td>
-                            <td *ngIf="diff[4] >= '0'" style="background-color: #00da00">
+                            <td *ngIf="diff[4] == '0'" style="background-color: #00da00">
                                 <span style="float: right; color: white"><b>{{diff[4]}}</b></span>
                             </td>
                         </tr>
-                        <tr *ngIf="MonthDataList != ''">
+                        <tr *ngIf="MonthDataList != null">
                             <td>5</td>
                             <td>{{MonthDataList.product5}}</td>
                             <td>{{row[5].column3}}</td>
@@ -176,14 +176,14 @@
                             <td>{{MonthDataList.monthRecieve5}}</td>
                             <td>{{row[5].column6}}</td>
                             <td>{{max[5]}}</td>
-                            <td *ngIf="diff[5] < '0'" style=" background-color: red">
+                            <td *ngIf="diff[5] != '0'" style=" background-color: red">
                                 <span style="float: right; color: white"><b>{{diff[5]}}</b></span>
                             </td>
-                            <td *ngIf="diff[5] >= '0'" style="background-color: #00da00">
+                            <td *ngIf="diff[5] == '0'" style="background-color: #00da00">
                                 <span style="float: right; color: white"><b>{{diff[5]}}</b></span>
                             </td>
                         </tr>
-                        <tr *ngIf="MonthDataList != ''">
+                        <tr *ngIf="MonthDataList != null">
                             <td>6</td>
                             <td>{{MonthDataList.product6}}</td>
                             <td>{{row[6].column3}}</td>
@@ -191,10 +191,10 @@
                             <td>{{MonthDataList.monthRecieve6}}</td>
                             <td>{{row[6].column6}}</td>
                             <td>{{max[6]}}</td>
-                            <td *ngIf="diff[6] < '0'" style=" background-color: red">
+                            <td *ngIf="diff[6] != '0'" style=" background-color: red">
                                 <span style="float: right; color: white"><b>{{diff[6]}}</b></span>
                             </td>
-                            <td *ngIf="diff[6] >= '0'" style="background-color: #00da00">
+                            <td *ngIf="diff[6] == '0'" style="background-color: #00da00">
                                 <span style="float: right; color: white"><b>{{diff[6]}}</b></span>
                             </td>
                         </tr>
