--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-02/ts01-02.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-02/ts01-02.component.html
@@ -118,7 +118,7 @@
                             </div>
 
                             <div class="fourteen wide field">
-                                <textarea rows="3" style="resize : none;" type="text" name="case" [(ngModel)]="obj.case" required></textarea>
+                                <input   type="text" name="case" [(ngModel)]="obj.case" required>
                             </div>
                         </div>
 
